Updated paths to Java 11